force-app/main/default/objects/Mirror_Clause__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>Clause__r.Active__c</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clause__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clause</label>
        <referenceTo>APXT_Redlining__Clause__c</referenceTo>
        <relationshipLabel>Mirror Clauses</relationshipLabel>
        <relationshipName>Mirror_Clauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_in_Offer__c</fullName>
        <formula>TEXT(Clause__r.Location_in_Offer__c)</formula>
        <label>Location in Offer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Mirror Clause</label>
    <nameField>
        <label>Mirror Clause Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mirror Clauses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>